syntax = "proto3";

package meshapi;

option go_package = "github.com/edgelesssys/contrast/internal/meshapi";

service MeshAPI {
  rpc NewMeshCert(NewMeshCertRequest) returns (NewMeshCertResponse);
  rpc Recover(RecoverRequest) returns (RecoverResponse);
}

message NewMeshCertRequest {
  reserved 1;
  reserved "PeerPublicKeyHash";
}

message NewMeshCertResponse {
  // PEM-encoded certificate used by the workload as CA
  bytes MeshCACert = 1;
  // Concatenated PEM-encoded certificates used by the workload certificate chain
  bytes CertChain = 2;
  // PEM-encoded certificate when workloads trust also workloads from previous manifests
  bytes RootCACert = 3;
  // Raw byte slice which can be used to derive more secrets
  bytes WorkloadSecret = 4;
}

message RecoverRequest {}

message RecoverResponse {
  bytes Seed = 1;
  bytes Salt = 2;
  bytes MeshCAKey = 3;
  bytes LatestManifest = 4;
}
